; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/fuse/extr_inode.c_fuse_clear_inode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/fuse/extr_inode.c_fuse_clear_inode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.fuse_conn = type { i32 }
%struct.fuse_inode = type { i32*, i32, i32 }

@MS_ACTIVE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.inode*)* @fuse_clear_inode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fuse_clear_inode(%struct.inode* %0) #0 {
  %2 = alloca %struct.inode*, align 8
  %3 = alloca %struct.fuse_conn*, align 8
  %4 = alloca %struct.fuse_inode*, align 8
  store %struct.inode* %0, %struct.inode** %2, align 8
  %5 = load %struct.inode*, %struct.inode** %2, align 8
  %6 = getelementptr inbounds %struct.inode, %struct.inode* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @MS_ACTIVE, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %31

13:                                               ; preds = %1
  %14 = load %struct.inode*, %struct.inode** %2, align 8
  %15 = call %struct.fuse_conn* @get_fuse_conn(%struct.inode* %14)
  store %struct.fuse_conn* %15, %struct.fuse_conn** %3, align 8
  %16 = load %struct.inode*, %struct.inode** %2, align 8
  %17 = call %struct.fuse_inode* @get_fuse_inode(%struct.inode* %16)
  store %struct.fuse_inode* %17, %struct.fuse_inode** %4, align 8
  %18 = load %struct.fuse_conn*, %struct.fuse_conn** %3, align 8
  %19 = load %struct.fuse_inode*, %struct.fuse_inode** %4, align 8
  %20 = getelementptr inbounds %struct.fuse_inode, %struct.fuse_inode* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = load %struct.fuse_inode*, %struct.fuse_inode** %4, align 8
  %23 = getelementptr inbounds %struct.fuse_inode, %struct.fuse_inode* %22, i32 0, i32 2
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.fuse_inode*, %struct.fuse_inode** %4, align 8
  %26 = getelementptr inbounds %struct.fuse_inode, %struct.fuse_inode* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 8
  %28 = call i32 @fuse_send_forget(%struct.fuse_conn* %18, i32* %21, i32 %24, i32 %27)
  %29 = load %struct.fuse_inode*, %struct.fuse_inode** %4, align 8
  %30 = getelementptr inbounds %struct.fuse_inode, %struct.fuse_inode* %29, i32 0, i32 0
  store i32* null, i32** %30, align 8
  br label %31

31:                                               ; preds = %13, %1
  ret void
}

declare dso_local %struct.fuse_conn* @get_fuse_conn(%struct.inode*) #1

declare dso_local %struct.fuse_inode* @get_fuse_inode(%struct.inode*) #1

declare dso_local i32 @fuse_send_forget(%struct.fuse_conn*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
